k3s-manifest/uptime-kuma/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    name: uptime-kuma
